--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
+    "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
+    "redux-promise": "^0.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node build_scripts/generate_mock_data; react-scripts start & json-server --watch src/data/db.json --port 3004",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server --watch src/data/db.json --port 3004",
+    "generate": "node build_scripts/generate_mock_data",
+    "dev": "concurrently --kill-others \"npm run start\" \"npm run api\""
+  },
+  "devDependencies": {
+    "json-server": "^0.14.0",
+    "json-schema-faker": "0.3.6"
   }
 }
